# florence

./: env_setup.sh  launch_amcl_demo.sh  launch_base_manually.sh  launch_cartographer.sh  launch_exploration_demo.sh  launch_florence.sh  launch_gazebo.sh  launch_gmapping_demo.sh  launch_move_base_demo.sh  launch_rviz.sh
src/ROS-TCP-Endpoint/launch/: endpoint.launch
src/dynamixel/dynamixel_pan_tilt/: CMakeLists.txt  LICENSE  package.xml
src/dynamixel/dynamixel_pan_tilt/config/: servo_motor_params.yaml
src/dynamixel/dynamixel_pan_tilt/launch/: pan_tilt.launch
src/dynamixel/dynamixel_pan_tilt/meshes/: link_3.stl
src/dynamixel/dynamixel_pan_tilt/msg/: PanTiltAngle.msg
src/dynamixel/dynamixel_pan_tilt/scripts/: dynamixel_keyboard_nudge.py  dynamixel_pan_tilt_joy.py  dynamixel_pan_tilt_node.py  sync_read_write_node.py
src/dynamixel/dynamixel_pan_tilt/urdf/: dynamixel_pan_tilt.urdf.xacro
src/florence/: CMakeLists.txt  package.xml
src/florence/config/: husky_laser_filter.yaml
src/florence/launch/: florence.launch
src/florence/scripts/: move_florence.py  usb_cam_publisher.py
src/husky_cartographer_navigation/launch/: cartographer_florence.launch
src/ldlidar_stl_ros/launch/: ld06.launch
udev_rules/: 80-local.rules  99-ae-lidar.rules  99-ae-um7.rules
