<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_pan_tilt</name>
  <version>0.0.0</version>
  <description>The dynamixel_pan_tilt package</description>

  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>dynamixel_sdk_examples</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>dynamixel_sdk_examples</build_export_depend>
  <build_export_depend>dynamixel_workbench_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>dynamixel_sdk_examples</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
